[package]
name = "reliquary-archiver"
version = "0.1.15"
edition = "2021"
license = "MIT"
repository = "https://github.com/IceDynamix/reliquary-archiver"
publish = false
readme = "README.md"
homepage = "https://github.com/IceDynamix/reliquary-archiver"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.23", features = ["derive"] }
chrono = "0.4.39"
color-eyre = "0.6.3"
pcap = "2.2.0"
protobuf = "~3.4.0" # match the protobuf version used in reliquary-codegen
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
ureq = { version = "2.12.1" }
reliquary = { git = "https://github.com/IceDynamix/reliquary", tag = "v7.0.0" }

[target.'cfg(windows)'.dependencies]
self_update = "0.41.0"

[build-dependencies]
ureq = { version = "2.12.1", features = ["json"] }
reliquary = { git = "https://github.com/IceDynamix/reliquary", tag = "v7.0.0" }

[profile.dev]
# there's a field in the kcp protocol that hyv uses differently from the default implementation
# (some kind of timestamp), except that i don't know what it is exactly and i haven't bothered
# to circumvent the addition that happens in the kcp library
overflow-checks = false

[profile.release]
opt-level = "z"         # optimize for size
lto = true
overflow-checks = false # see comment above
