[package]
name = "reliquary-archiver"
version = "0.7.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/IceDynamix/reliquary-archiver"
publish = false
readme = "README.md"
homepage = "https://github.com/IceDynamix/reliquary-archiver"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.31", features = ["derive"] }
chrono = "0.4.40"
color-eyre = "0.6.3"
pcap = { version = "2.2.0", optional = true }
protobuf = "=3.7.1" # match the protobuf version used in reliquary-codegen
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
ureq = { version = "2.12.1" }
reliquary = { git = "https://github.com/IceDynamix/reliquary", tag = "v13.1.0", features = [
    "proto-rqa",
] }
ctrlc = "3.4.5"
axum = { version = "0.8.3", optional = true, features = ["ws", "tracing"] }
tokio = { version = "1.44.2", optional = true, features = ["full"] }
futures = { version = "0.3.31", optional = true }
serde_with = "3.12.0"
rfd = "0.15.3"
tracing-log = "0.2.0"

[target.'cfg(windows)'.dependencies]
self_update = "0.42.0"
pktmon = { version = "0.6.1", optional = true }
windows = { version = "0.61", features = [
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Registry",
    "Win32_Foundation",
    "Win32_System_Console",
] }

[build-dependencies]
ureq = { version = "2.12.1", features = ["json"] }
reliquary = { git = "https://github.com/IceDynamix/reliquary", tag = "v13.1.0", features = [
    "proto-rqa",
] }

[profile.dev]
# there's a field in the kcp protocol that hyv uses differently from the default implementation
# (some kind of timestamp), except that i don't know what it is exactly and i haven't bothered
# to circumvent the addition that happens in the kcp library
overflow-checks = false

[profile.release]
opt-level = "z"         # optimize for size
lto = true
overflow-checks = false # see comment above

[features]
default = ["stream", "pcap"]
pktmon = ["dep:pktmon"]
pcap = ["dep:pcap"]
stream = ["dep:axum", "dep:tokio", "dep:futures"]
